
Check out [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=11349]this[/url] program also. It's for graphical modding.

For editing language files in The Conquerors,
I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2023.5.21[/b]:
-Restored functionality for Star Wars.

Version [b]2023.5.17[/b]:
-Added support for Return of Rome.

Version [b]2023.3.7[/b]:
-Fixed heap corruption when using a language DLL file.

Version [b]2022.8.21[/b]:
-Improved search filters.
-Terrains can use localized name, if available.

Version [b]2022.2.2[/b]:
-Prevent focusing on sub-lists unintentionally.
-Updated default civilization resource names for AoE II DE.
-Allow choosing a file for editable lists.

Version [b]2021.10.24[/b]:
-Added support for updated Expanding Fronts.
-Added missing technology effect types into list for AoE II DE.

Version [b]2021.8.23[/b]:
-Restored redundant and slower, but functioning erasure of multiple items from lists.

Version [b]2021.7.25[/b]:
-Restored modifiers for strings, /+ with text to append, and /- with integer to shorten the strings.

Version [b]2021.7.19[/b]:
-Added hero glow sprite for units.
-Fixed display angle in SLP view.

Version [b]2021.5.9[/b]:
-Updated technology effect attribute list for DE2.
-Updated armor list defaults for DE2.
-Fixed multiple bugs in units and terrain restrictions tabs.
-Added additional folder for loading modded sprite files.
-Prevented AGE windows from spawning beyond observable desktop.
-Fixed fresh bug in SLP view close handler.

Version [b]2021.4.25[/b]:
-Fixed more bugs in effects tab including inability to type in negative armor and attack values for UP and DE2.
-Show all angles of DE sprites.
-Fixed targeting with mouse.

Version [b]2021.4.18[/b]:
-Scroll rate of tabs can be adjusted in options.